# autonomous-coding

./: .gitignore  COMMS.md  README.md  agent_launcher.py  llm_provider.py  pyproject.toml  requirements.txt  run_commander.py  run_frontend_new.py  run_sentinel.py  run_task.py  security.py
agents/: agent_config.py
agents/sentinel/: __init__.py  repair_workflows.py
archive/: agent.py  progress.py
archive/legacy/agents/agents/: __init__.py
archive/legacy/lib/: client.py  opencode_client.py
archive/legacy/scripts/: run_frontend_agent.py  run_sentinel_new.py  run_task_new.py
archive/legacy/tasks/: feature_list.json  frontend_tasks.json  sentinel_tasks.json
autoagents/: __init__.py
autoagents/agents/: __init__.py  config.py  emojis.py  registry.py
autoagents/agents/architect/: README.md  __init__.py  config.json  runner.py  tasks.json
autoagents/agents/architect/prompts/: system_prompt.md
autoagents/agents/backend/: README.md  __init__.py  config.json  runner.py  tasks.json
autoagents/agents/backend/prompts/: system_prompt.md
autoagents/agents/commander/: README.md  __init__.py  budget_orchestrator.py  config.json  orchestrator.py  prompt_engineer.py  runner.py  tasks.json
autoagents/agents/commander/prompts/: system_prompt.md
autoagents/agents/debugger/: README.md  __init__.py  config.json  runner.py  tasks.json
autoagents/agents/debugger/prompts/: system_prompt.md
autoagents/agents/frontend/: README.md  __init__.py  config.json  runner.py  tasks.json
autoagents/agents/sentinel/: README.md  __init__.py  config.json  health_monitors.py  repair_workflows.py  runner.py  tasks.json
autoagents/agents/tester/: README.md  __init__.py  config.json  runner.py  tasks.json
autoagents/lib/: __init__.py  budget.py  client.py  comms.py  logging_utils.py  output.py  security.py  streaming.py  styles.py  workspace.py
autoagents/lib/providers/: __init__.py  opencode.py
autoagents/runners/: __init__.py  frontend_runner.py  sentinel_runner.py  task_runner.py
control-station-config/: run_cs_agent.py
docs/: AGENTS.md  FRONTEND_RUNNER_DOCUMENTATION.md  OUTPUT_TEMPLATE.md  SENTINEL_AGENT_DOCUMENTATION.md  SESSION_REPORT_20251219.md  TASK_RUNNER_DOCUMENTATION.md
integrations/control_station/: __init__.py  run_cs_agent.py
prompts/: coding_prompt.md  sentinel_prompt.md
scripts/: run_frontend.py  run_sentinel.py  run_task.py
tasks/: frontend.json
tasks/schema/: task_schema_v5.json
templates/agent_workspace/config/: agent.json
templates/agent_workspace/tasks/: frontend.json  general.json
tests/: __init__.py  conftest.py
tests/test_lib/: __init__.py  test_logging_utils.py  test_output.py  test_styles.py
tests/test_runners/: __init__.py
(+4 files in other folders)
