[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoagents"
version = "2.1.0"
description = "Autonomous coding agents using Claude Code SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AUTOAGENTS" }
]
keywords = ["claude", "ai", "autonomous", "coding", "agent"]

dependencies = [
    "claude-code-sdk>=0.0.25",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Legacy runners (kept for backwards compatibility)
autoagent-task = "autoagents.runners.task_runner:run"
autoagent-frontend = "autoagents.runners.frontend_runner:run"
autoagent-sentinel = "autoagents.runners.sentinel_runner:run"

# New agent-folder structure (7 agents)
commander = "autoagents.agents.commander.runner:run"
sentinel = "autoagents.agents.sentinel.runner:run"
frontend = "autoagents.agents.frontend.runner:run"
backend = "autoagents.agents.backend.runner:run"
architect = "autoagents.agents.architect.runner:run"
debugger = "autoagents.agents.debugger.runner:run"
tester = "autoagents.agents.tester.runner:run"

[tool.hatch.build.targets.wheel]
packages = ["autoagents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
